.provarCaches/00D5f000005vwGkEAI/objects/rstk__sylimite__c.object
<CustomObject>
    <description>sylimite__c</description>
    <fields>
        <fullName>rstk__sylimite_currpoloader__c</fullName>
        <label>Current POLOADER</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sylimite_currsoapi__c</fullName>
        <label>Current SOAPI</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sylimite_currsydata__c</fullName>
        <label>Current SYDATA</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sylimite_date__c</fullName>
        <label>Snapshot Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__sylimite_maxpoloader__c</fullName>
        <label>Maximum POLOADER Allowed</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sylimite_maxsoapi__c</fullName>
        <label>Maximum SOAPI Allowed</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sylimite_maxsydata__c</fullName>
        <label>Maximum SYDATA Allowed</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>sylimite</label>
    <listViews>
        <fullName>rstk__RSTK</fullName>
        <columns>NAME</columns>
        <columns>rstk__sylimite_date__c</columns>
        <columns>rstk__sylimite_maxsydata__c</columns>
        <columns>rstk__sylimite_currsydata__c</columns>
        <columns>rstk__sylimite_maxsoapi__c</columns>
        <columns>rstk__sylimite_currsoapi__c</columns>
        <columns>rstk__sylimite_maxpoloader__c</columns>
        <columns>rstk__sylimite_currpoloader__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>RSTK</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>sylimites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>